# othello

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake  README.md
.github/: constants.env  oneapi_components.json
.github/actions/setup_ccache/: action.yml
.github/actions/setup_cpm_cache/: action.yml
.github/scripts/: install_oneapi.ps1  set_env_vars.ps1
.github/workflows/: build-macos.yml  build-ubuntu.yml  build-windows.yml  codeql-analysis.yml  template-janitor.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/: game_state.hpp
include/mpi_sample/: parallel_integrate.hpp  serial_integrate.hpp
include/myproject/: sample_library.hpp
include/othello/: board.hpp  rendering.hpp  sample_library.hpp
src/: CMakeLists.txt  game_state.cpp  othello.cpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/mpi_sample/: CMakeLists.txt  parallel_integrate.cpp  serial_integrate.cpp
src/othello/: CMakeLists.txt  board.cpp  main.cpp  rendering.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  board_test.cpp  constexpr_tests.cpp  tests.cpp
test/mpi_tests/: CMakeLists.txt  parallel_integrate_tests.cpp  serial_integrate_tests.cpp
